Alterações nos HTMLs do Admin

--- a/views/admin/categories-products.html
+++ b/views/admin/categories-products.html
@@ -1,18 +1,24 @@
-<!-- Content Wrapper. Contains page content -->
-<div class="content-wrapper">
-<!-- Content Header (Page header) -->
-<section class="content-header">
-  <h1>
-    Produtos da Categoria {$category.descategory}
-  </h1>
-  <ol class="breadcrumb">
-    <li><a href="/admin"><i class="fa fa-dashboard"></i> Home</a></li>
-    <li><a href="/admin/categories">Categorias</a></li>
-    <li><a href="/admin/categories/{$category.idcategory}">{$category.descategory}</a></li>
-    <li class="active"><a href="/admin/categories/{$category.idcategory}/products">Produtos</a></li>
-  </ol>
-</section>
-
+  <!-- Content Wrapper. Contains page content -->
+  <div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <div class="content-header">
+      <div class="container-fluid">
+        <div class="row mb-2">
+          <div class="col-sm-6">
+            
+          </div>
+          <!-- /.col -->
+          <div class="col-sm-6">
+            <ol class="breadcrumb float-sm-right">
+              <li class="breadcrumb-item"><a href="/admin">Home</a></li>
+              <li class="breadcrumb-item active"><a href="/admin/categories">Categorias</a></li>
+              <li class="breadcrumb-item active">{$category.descategory}</li>
+            </ol>
+          </div><!-- /.col -->
+        </div><!-- /.row -->
+      </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.content-header -->
 <!-- Main content -->
 <section class="content">
 
