--- a/views/cart.html
+++ b/views/cart.html
@@ -51,7 +51,7 @@
                                         </td>
 
                                         <td class="product-name">
-                                            <a href="/products/{$value.desurl}">{$value.desurl}</a> 
+                                            <a href="/products/{$value.desurl}">{$value.desproduct}</a> 
                                         </td>
 
                                         <td class="product-price">
