Busca e Páginas no Admin Users

--- a/views/admin/users.html
+++ b/views/admin/users.html
@@ -25,41 +25,60 @@
   	<div class="col-md-12">
   		<div class="box box-primary">
             
-            <div class="box-body no-padding">
-              <table class="table table-striped">
-                <thead>
-                  <tr>
-                    <th style="width: 10px">#</th>
-                    <th>Nome</th>
-                    <th>E-mail</th>
-                    <th>Login</th>
-                    <th style="width: 60px">Admin</th>
-                    <th style="width: 140px">&nbsp;</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <!-- RainTPL: Loop para mostrar informações do array $users de index.php -->
-                  {loop="$users"}
-                  <tr>
-                    <td>{$value.iduser}</td>
-                    <td>{$value.desperson}</td>
-                    <td>{$value.desemail}</td>
-                    <td>{$value.deslogin}</td/>
-                    <td>{if="$value.inadmin == 1"}Sim{else}Não{/if}</td>
-                    <td>
-                      <a href="/admin/users/{$value.iduser}" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Editar</a>
-                      <a href="/admin/users/{$value.iduser}/delete" onclick="return confirm('Deseja realmente excluir este registro?')" class="btn btn-danger btn-xs"><i class="fa fa-trash"></i> Excluir</a>
-                    </td>
-                  </tr>
-                  {/loop} 
-                  <!-- RainTPL: Fim do loop -->
-                </tbody>
-              </table>
-            </div>
-            <!-- /.box-body -->
-            <center><a href="/admin/users/create" class="btn btn-primary"><i class = "fa fa-user"></i> Novo Usuário</a></center>
+        <div class="box-tools">
+            <form action="/admin/users">
+              <div class="input-group input-group-sm" style="width: 150px;">
+                <input type="text" name="search" class="form-control pull-right" placeholder="Search" value="{$search}">
+                <div class="input-group-btn">
+                  <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+                </div>
+              </div>
+            </form>
           </div>
-  	</div>
+
+        <div class="box-body no-padding">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th style="width: 10px">#</th>
+                <th>Nome</th>
+                <th>E-mail</th>
+                <th>Login</th>
+                <th style="width: 60px">Admin</th>
+                <th style="width: 140px">&nbsp;</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- RainTPL: Loop para mostrar informações do array $users de index.php -->
+              {loop="$users"}
+              <tr>
+                <td>{$value.iduser}</td>
+                <td>{$value.desperson}</td>
+                <td>{$value.desemail}</td>
+                <td>{$value.deslogin}</td/>
+                <td>{if="$value.inadmin == 1"}Sim{else}Não{/if}</td>
+                <td>
+                  <a href="/admin/users/{$value.iduser}" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Editar</a>
+                  <a href="/admin/users/{$value.iduser}/delete" onclick="return confirm('Deseja realmente excluir este registro?')" class="btn btn-danger btn-xs"><i class="fa fa-trash"></i> Excluir</a>
+                </td>
+              </tr>
+              {/loop} 
+              <!-- RainTPL: Fim do loop -->
+            </tbody>
+          </table>
+        </div>
+        <!-- /.box-body -->
+        <center><a href="/admin/users/create" class="btn btn-primary"><i class = "fa fa-user"></i> Novo Usuário</a></center>
+        <div class="box-footer clearfix">
+          <ul class="pagination pagination-sm no-margin pull-right">
+            <p>Página -></p>
+            {loop="$pages"}
+            <li><a href="{$value.href}">/ {$value.text} /</a></li>
+            {/loop}
+          </ul>
+        </div>
+      </div>
+
   </div>
 
 </section>
